--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -2,9 +2,10 @@
 
 title: Ovation API Reference 
 
-language_tabs: 
-   - shell
+language_tabs:
    - ruby
+   - json-doc: payload
+   - json: response
 
 includes: 
    - errors 
@@ -24,11 +25,13 @@ LIMS+: logical sample tracking, document and training record management
 |apiKey|*API Key*|
 |---|---| 
 
+<%= partial "./api/admin_reports.html.md.erb" %>
 <%= partial "./api/documents.html.md.erb" %>
 <%= partial "./api/project_templates.html.md.erb" %>
 <%= partial "./api/provider_accounts.html.md.erb" %>
 <%= partial "./api/provider_account_contacts.html.md.erb" %>
 <%= partial "./api/providers.html.md.erb" %>
+<%= partial "./api/reports.html.md.erb" %>
 <%= partial "./api/requisitions.html.md.erb" %>
 <%= partial "./api/resources.html.md.erb" %>
 <%= partial "./api/sales_groups.html.md.erb" %>
