--- a/source/api/_admin_reports.html.md.erb
+++ b/source/api/_admin_reports.html.md.erb
@@ -49,11 +49,12 @@
   ]
 }
 ```
+
 ```ruby
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/admin_reports?type=workflow_report&startDate=2022-01-01&endDate=2022-01-12&workflowDefinitionId=1&perPage=10&page=1&workflowDefinitionId=1")
+url = URI("https://lab-services.ovatio.io/api/v3/admin_reports?type=workflow_report&startDate=2022-01-01&endDate=2022-01-12&workflowDefinitionId=1&perPage=10&page=1&workflowDefinitionId=1")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Get.new(url)
